<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/back"
                android:text="@string/back"
                android:textSize="25dp"
                android:background="@color/colorWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/login"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/colorBlack"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help"
                android:textSize="25dp"
                android:id="@+id/help"
                android:background="@color/colorWhite"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/login_id"
                android:textSize="25dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginRight="10dp"
                android:hint="@string/login_hint"
                android:textSize="25dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/login_id"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pass"
                android:layout_marginLeft="10dp"
                android:textSize="25dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginRight="10dp"
                android:hint="@string/pass_hint"
                android:textSize="25dp"
                android:textColor="@color/colorBlack"
                android:password="true"
                android:id="@+id/login_pass"
                android:maxLines="1"/>
        </LinearLayout>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login_but"
            android:textSize="25dp"
            android:background="@color/coloryellow"
            android:id="@+id/but_login"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:text="@string/login_forget_pass"
                android:background="@color/colorWhite"
                android:textSize="20dp"
                android:id="@+id/but_pass"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_resiger"
                android:textSize="25dp"
                android:background="@drawable/textview_border"
                android:id="@+id/but_resiger"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>