<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/back"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/resiger_re"
                android:textColor="@color/colorBlack"
                android:textSize="25dp" />

            <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/help"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/login_id"
                android:textSize="25dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginRight="10dp"
                android:hint="@string/login_hint"
                android:textSize="25dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/resiger_username"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resiger_email"
                android:layout_marginLeft="10dp"
                android:textSize="25dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginRight="10dp"
                android:hint="@string/resiger_emailhint"
                android:textSize="25dp"
                android:textColor="@color/colorBlack"
                android:password="true"
                android:id="@+id/resiger_email"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pass"
                android:layout_marginLeft="10dp"
                android:textSize="25dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginRight="10dp"
                android:hint="@string/pass_hint"
                android:textSize="25dp"
                android:textColor="@color/colorBlack"
                android:password="true"
                android:id="@+id/resiger_password"
                android:maxLines="1"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/resiger_res"
                android:textSize="25dp"
                android:id="@+id/but_resiger"
                android:background="@drawable/textview_border"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>